--- a/Gclaim_desktop/src/GUI/Produit/addProduct.fxml
+++ b/Gclaim_desktop/src/GUI/Produit/addProduct.fxml
@@ -8,31 +8,36 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane id="AnchorPane" fx:id="mainPane" prefHeight="767.0" prefWidth="822.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Produit.AddProductController"> 
     <children>
-      <Label id="label" layoutX="279.0" layoutY="267.0" text="Nom" />
-      <Label id="label" layoutX="280.0" layoutY="343.0" text="prix" />
-      <Label id="label" layoutX="281.0" layoutY="307.0" text="Description" />
-      <Label id="label" layoutX="287.0" layoutY="232.0" text="Categorie" />
-      <TextField fx:id="txtnom" layoutX="497.0" layoutY="262.0" />
-      <TextField fx:id="txtdesc" layoutX="497.0" layoutY="302.0" />
-      <TextField fx:id="txtprix" layoutX="497.0" layoutY="338.0" />
-      <Button id="buttonM" fx:id="btnAjouter" layoutX="652.0" layoutY="462.0" mnemonicParsing="false" onAction="#addProduct" prefHeight="31.0" prefWidth="156.0" style="-fx-background-color: #5b4ebd;" text="ajouter" textFill="WHITE" />
-      <ChoiceBox id="choicB" fx:id="comboBoxID" layoutX="497.0" layoutY="227.0" prefHeight="31.0" prefWidth="187.0" style="-fx-background-color: #dddddd;" />
+      <Label id="label" layoutX="245.0" layoutY="221.0" text="Nom" />
+      <Label id="label" layoutX="235.0" layoutY="358.0" text="prix" />
+      <Label id="label" layoutX="239.0" layoutY="284.0" text="Description" />
+      <Label id="label" layoutX="243.0" layoutY="166.0" text="Categorie" />
+      <TextField fx:id="txtnom" layoutX="364.0" layoutY="217.0" />
+      <TextField fx:id="txtdesc" layoutX="364.0" layoutY="280.0" />
+      <TextField fx:id="txtprix" layoutX="364.0" layoutY="346.0" />
+      <Button id="buttonM" fx:id="btnAjouter" layoutX="530.0" layoutY="492.0" mnemonicParsing="false" onAction="#addProduct" prefHeight="31.0" prefWidth="156.0" style="-fx-background-color: #5b4ebd;" text="ajouter" textFill="WHITE" />
+      <ChoiceBox id="choicB" fx:id="comboBoxID" layoutX="364.0" layoutY="159.0" prefHeight="31.0" prefWidth="187.0" style="-fx-background-color: #dddddd;" />
       <Label id="titreLabel" layoutX="325.0" layoutY="14.0" prefHeight="102.0" prefWidth="454.0" text="ajouter un produit">
          <font>
             <Font name="Calibri" size="26.0" />
          </font>
       </Label>
-      <Button id="buttonM" fx:id="btngetback" layoutX="269.0" layoutY="462.0" mnemonicParsing="false" onAction="#loadMenu" prefHeight="31.0" prefWidth="156.0" style="-fx-background-color: #5b4ebd;" text="Retour" textFill="WHITE" />
+      <Button id="buttonM" fx:id="btngetback" layoutX="264.0" layoutY="485.0" mnemonicParsing="false" onAction="#loadMenu" prefHeight="31.0" prefWidth="156.0" style="-fx-background-color: #5b4ebd;" text="Retour" textFill="WHITE" />
       <Label fx:id="nomHebr" layoutX="342.0" layoutY="85.0" />
-      <TextField fx:id="txtqt" layoutX="497.0" layoutY="371.0" />
-      <Label id="label" layoutX="280.0" layoutY="375.0" text="quantité" />
+      <TextField fx:id="txtqt" layoutX="364.0" layoutY="414.0" />
+      <Label id="label" layoutX="236.0" layoutY="418.0" text="quantité" />
       <ImageView fx:id="ImageviewID" fitHeight="208.0" fitWidth="215.0" layoutX="24.0" layoutY="212.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../../../../Desktop/1200px-Icons8_flat_add_image.svg.png" />
          </image></ImageView>
       <Button fx:id="btnImage" layoutX="71.0" layoutY="436.0" mnemonicParsing="false" style="-fx-background-color: #5b4ebd;" text="Importer image" textFill="WHITE" />
+      <Text fx:id="alertnom" fill="RED" layoutX="362.0" layoutY="265.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="304.0" />
+      <Text fx:id="alertdesc" fill="RED" layoutX="362.0" layoutY="329.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="304.0" />
+      <Text fx:id="alertprix" fill="RED" layoutX="364.0" layoutY="396.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="304.0" />
+      <Text fx:id="alertqte" fill="RED" layoutX="362.0" layoutY="466.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="304.0" />
    </children> 
 </AnchorPane>
