--- a/Gclaim_desktop/src/GUI/Produit/addcategorie.fxml
+++ b/Gclaim_desktop/src/GUI/Produit/addcategorie.fxml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="mainPain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Produit.AddcategorieController">
    <children>
-      <TextField fx:id="nomc" layoutX="235.0" layoutY="103.0" />
+      <TextField fx:id="nomc" layoutX="236.0" layoutY="94.0" />
       <TextField fx:id="typec" layoutX="236.0" layoutY="157.0" />
-      <Button fx:id="btnajout" layoutX="300.0"  layoutY="253.0" mnemonicParsing="false" onAction="#addCateg" text="ajouter" />
+      <Button fx:id="btnajout" layoutX="300.0" layoutY="253.0" mnemonicParsing="false" onAction="#addCateg" text="ajouter" />
       <Button fx:id="btnretour" layoutX="147.0" layoutY="253.0" mnemonicParsing="false" onAction="#loadMenu" text="retour" />
+      <Label layoutX="132.0" layoutY="98.0" text="nom categorie" />
+      <Label layoutX="132.0" layoutY="161.0" text="Type categorie" />
+      <Text fx:id="alerteajout" fill="RED" layoutX="236.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="355.1999755859374" />
+      <Text fx:id="alerteajout1" fill="RED" layoutX="236.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="355.1999755859374" />
    </children>
 </AnchorPane>
