--- a/Gclaim_desktop/src/GUI/Produit/addProduct.fxml
+++ b/Gclaim_desktop/src/GUI/Produit/addProduct.fxml
@@ -19,14 +19,14 @@
       <TextField fx:id="txtnom" layoutX="364.0" layoutY="217.0" />
       <TextField fx:id="txtdesc" layoutX="364.0" layoutY="280.0" />
       <TextField fx:id="txtprix" layoutX="364.0" layoutY="346.0" />
-      <Button id="buttonM" fx:id="btnAjouter" layoutX="530.0" layoutY="492.0" mnemonicParsing="false" onAction="#addProduct" prefHeight="31.0" prefWidth="156.0" style="-fx-background-color: #5b4ebd;" text="ajouter" textFill="WHITE" />
+      <Button id="buttonM" fx:id="btnAjouter" layoutX="232.0" layoutY="492.0" mnemonicParsing="false" onAction="#addProduct" prefHeight="31.0" prefWidth="454.0" style="-fx-background-color: C24400;" text="ajouter" textFill="WHITE" />
       <ChoiceBox id="choicB" fx:id="comboBoxID" layoutX="364.0" layoutY="159.0" prefHeight="31.0" prefWidth="187.0" style="-fx-background-color: #dddddd;" />
       <Label id="titreLabel" layoutX="325.0" layoutY="14.0" prefHeight="102.0" prefWidth="454.0" text="ajouter un produit">
          <font>
             <Font name="Calibri" size="26.0" />
          </font>
       </Label>
-      <Button id="buttonM" fx:id="btngetback" layoutX="264.0" layoutY="485.0" mnemonicParsing="false" onAction="#loadMenu" prefHeight="31.0" prefWidth="156.0" style="-fx-background-color: #5b4ebd;" text="Retour" textFill="WHITE" />
+      <Button id="buttonM" fx:id="btngetback" layoutX="706.0" layoutY="49.0" mnemonicParsing="false" onAction="#loadMenu" prefHeight="31.0" prefWidth="20.0" style="-fx-background-color: C24400;" text="X" textFill="WHITE" />
       <Label fx:id="nomHebr" layoutX="342.0" layoutY="85.0" />
       <TextField fx:id="txtqt" layoutX="364.0" layoutY="414.0" />
       <Label id="label" layoutX="236.0" layoutY="418.0" text="quantité" />
@@ -34,7 +34,7 @@
          <image>
             <Image url="@../../../../../../../Desktop/1200px-Icons8_flat_add_image.svg.png" />
          </image></ImageView>
-      <Button fx:id="btnImage" layoutX="71.0" layoutY="436.0" mnemonicParsing="false" style="-fx-background-color: #5b4ebd;" text="Importer image" textFill="WHITE" />
+      <Button fx:id="btnImage" layoutX="71.0" layoutY="436.0" mnemonicParsing="false" style="-fx-background-color: C24400;" text="Importer image" textFill="WHITE" />
       <Text fx:id="alertnom" fill="RED" layoutX="362.0" layoutY="265.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="304.0" />
       <Text fx:id="alertdesc" fill="RED" layoutX="362.0" layoutY="329.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="304.0" />
       <Text fx:id="alertprix" fill="RED" layoutX="364.0" layoutY="396.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="304.0" />
