--- a/Gclaim_desktop/src/GUI/Produit/showProduit.fxml
+++ b/Gclaim_desktop/src/GUI/Produit/showProduit.fxml
@@ -15,24 +15,24 @@
         <URL value="@showpanier.css" />
     </stylesheets>
    <children>
-      <ListView fx:id="txtListProd" layoutX="14.0" layoutY="104.0" onMouseClicked="#ProduitSelect" prefHeight="302.0" prefWidth="548.0" />
+      <ListView fx:id="txtListProd" layoutX="14.0" layoutY="104.0" onMouseClicked="#ProduitSelect" prefHeight="302.0" prefWidth="810.0" />
       <Label layoutX="365.0" layoutY="14.0" text="Affichage Produit">
          <font>
             <Font name="Arial Bold" size="24.0" />
          </font></Label>
-      <Button fx:id="btnRetour" layoutX="761.0" layoutY="361.0" mnemonicParsing="false" onAction="#loadMenu" text="retour" />
-      <Button fx:id="btnsupp" layoutX="611.0" layoutY="291.0" mnemonicParsing="false" onAction="#DeleteProduct" text="supprimer" />
-      <TextField fx:id="nomp" layoutX="633.0" layoutY="58.0" />
-      <TextField fx:id="descp" layoutX="633.0" layoutY="100.0" />
-      <TextField fx:id="prixp" layoutX="633.0" layoutY="144.0" />
-      <TextField fx:id="qtep" layoutX="633.0" layoutY="193.0" />
-      <Button fx:id="btnmodif" layoutX="722.0" layoutY="291.0" mnemonicParsing="false" onAction="#updateProduit" text="modifier" />
-      <Label layoutX="566.0" layoutY="62.0" text="nom" />
-      <Label layoutX="566.0" layoutY="104.0" text="desc" />
-      <Label layoutX="566.0" layoutY="148.0" text="prix" />
-      <Label layoutX="566.0" layoutY="197.0" text="quantité" />
-      <ChoiceBox fx:id="EtatBox" layoutX="632.0" layoutY="243.0" prefWidth="150.0" />
-      <Button fx:id="btnplusvu" layoutX="38.0" layoutY="71.0" mnemonicParsing="false" text="plus vu" />
+      <Button fx:id="btnRetour" layoutX="787.0" layoutY="28.0" mnemonicParsing="false" onAction="#loadMenu" text="X" />
+      <Button fx:id="btnsupp" layoutX="566.0" layoutY="492.0" mnemonicParsing="false" onAction="#DeleteProduct" style="-fx-background-color: c24400;" text="supprimer" />
+      <TextField fx:id="nomp" layoutX="105.0" layoutY="444.0" />
+      <TextField fx:id="descp" layoutX="105.0" layoutY="486.0" />
+      <TextField fx:id="prixp" layoutX="364.0" layoutY="444.0" />
+      <TextField fx:id="qtep" layoutX="364.0" layoutY="493.0" />
+      <Button fx:id="btnmodif" layoutX="677.0" layoutY="492.0" mnemonicParsing="false" onAction="#updateProduit" style="-fx-background-color: c24400;" text="modifier" />
+      <Label layoutX="38.0" layoutY="448.0" text="nom" />
+      <Label layoutX="38.0" layoutY="490.0" text="desc" />
+      <Label layoutX="297.0" layoutY="448.0" text="prix" />
+      <Label layoutX="297.0" layoutY="497.0" text="quantité" />
+      <ChoiceBox fx:id="EtatBox" layoutX="587.0" layoutY="444.0" prefWidth="150.0" />
+      <Button fx:id="btnplusvu" layoutX="38.0" layoutY="71.0" mnemonicParsing="false" style="-fx-background-color: c24400;" text="plus vu" />
       <Text fx:id="nbr" layoutX="444.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="95.73675537109375" />
     
    </children>
